--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,6 +34,7 @@ jobs:
       id-token: write
 
     steps:
+      - run: echo $IMAGE_NAME
       - name: Checkout repository
         uses: actions/checkout@v3
 
